--- a/widgets/src/App.css
+++ b/widgets/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+.body {
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.stopwatch {
+  width: 200px;
+  height: 100px;
+  border: 1px solid black;
+  border-radius: 2px;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.stopwatch-display {
+  font-size: 40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  font-family: sans-serif;
+  color: lightgreen;
+  border-color: lightgreen; 
+  background: transparent;
+  margin: 10px;
+  border-radius: 5px;
 }
